src/test/deca/context/valid/tests/20_MultipleBooleanwithInit.deca
// Description:
//    Test creation de plusieurs identifiers (boolean)
//
// Historique:
//    cree le 16/01/2022

{
    boolean x,y,z = true;
}
