src/test/deca/context/invalid/19_classeCompare.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 16: ContextualError: NotIntAndNotFloatType
// 
// Historique:
//    cree le 01/01/2022

class A {
}
{
   A a = new A();
   boolean b;
   // Doit etre refuse.
   b = a <= a;
}
